[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.3.0",
    "eth-account>=0.13.7",
    "flask-socketio>=5.5.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "web3>=7.13.0",
    "werkzeug>=3.1.3",
]
